# meridian

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.pt-BR.md  Makefile  README.md  README.pt-BR.md  SECURITY.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
data/catalog/: knowledge_base.json  knowledge_base_fat.json  routes_catalog.json  service_catalog.json
src/meridian/: __init__.py
src/meridian/application/: __init__.py
src/meridian/application/dspy_modules/: __init__.py  modules.py  signatures.py
src/meridian/application/pipelines/: __init__.py  rag_pipeline.py  structured_query_pipeline.py
src/meridian/application/query/: __init__.py  builder.py  sanitizer.py
src/meridian/application/router/: __init__.py  routing_engine.py  scoring.py  semantic_router.py
src/meridian/application/services/: __init__.py  ask_service.py  entity_stack.py  query_understanding.py
src/meridian/data/: __init__.py
src/meridian/data/catalog/: __init__.py  knowledge_base.json  knowledge_base_fat.json  routes_catalog.json  service_catalog.json
src/meridian/domain/: __init__.py
src/meridian/domain/interfaces/: __init__.py
src/meridian/domain/models/: __init__.py  knowledge.py  service_catalog.py  service_filter.py
src/meridian/domain/policies/: __init__.py
src/meridian/infrastructure/: __init__.py
src/meridian/infrastructure/config/: __init__.py  catalog_loader.py  settings.py
src/meridian/infrastructure/dspy/: __init__.py  grok.py  groq.py  loader.py
src/meridian/infrastructure/embeddings/: azure_provider.py  fake_provider.py  sentence_transformer_provider.py
src/meridian/infrastructure/llm/: providers.py
src/meridian/infrastructure/metrics/: __init__.py  router_metrics.py
src/meridian/infrastructure/observability/: __init__.py  tracer.py
src/meridian/infrastructure/redis/: __init__.py  redis_catalog_store.py  redis_vector_store.py
src/meridian/infrastructure/vectorstore/: __init__.py  in_memory_catalog.py  in_memory_store.py
src/meridian/interfaces/: __init__.py  composition.py
tests/integration/: test_ask_flow.py  test_structured_flow.py
tests/unit/: test_fatslim_and_reward.py  test_metrics_and_anaphora.py  test_query_builder.py  test_query_understanding.py  test_routing_engine.py  test_routing_policy.py  test_scoring.py  test_security_and_configuration.py  test_semantic_router.py
(+2 files in other folders)
